--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title><%= title %></title>
-    <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
+    <%= javascript_include_tag :application %>
+    <%= csrf_meta_tags %>
   </head>
   <body>
     <div class="container">
       <%= render 'layouts/header' %>
       <section class="round">
-        <% flash.each do |key, value| %>
+      <% flash.each do |key, value| %>
           <div class="flash <%= key %>"><%= value %></div>
         <% end %>
         <%= yield %>
@@ -19,4 +20,3 @@
     </div>
   </body>
 </html>
-
